--- a/마크다운정리/암호만들기 [1759].md
+++ b/마크다운정리/암호만들기 [1759].md
@@ -33,7 +33,7 @@
 
 - 각 줄에 하나씩, 사전식으로 가능성 있는 암호를 모두 출력한다.
 
-![image-20210311233109265](C:\Users\ssej0\AppData\Roaming\Typora\typora-user-images\image-20210311233109265.png)
+![image-20210311233109265](image/image-20210311233109265.png)
 
 
 
@@ -140,9 +140,7 @@ perm(0,0)
 
 
 
-![image-20210312011742902](암호만들기 [1759].assets/image-20210312011742902.png)
-
-
+![img](image/img.png)
 
 근데왜.. 메모리 시간은 그대로니..
 
