--- a/마크다운정리/치즈 [2636].md
+++ b/마크다운정리/치즈 [2636].md
@@ -69,7 +69,7 @@
 
   
 
-  - 굳이 BFS 를 사용할 필요는 없다고 느꼈다.
+  - 굳이 BFS 를 사용할 필요는 없다고 생각했다.
 
   
 
@@ -89,34 +89,34 @@ for r in range(row):
 
 dr = [0,0,1,-1] 
 dc = [-1,1,0,0]
-count = 0 # 치
+count = 0 # 시간 세는 변수
 S = list()
 
 
 setting = 1 # while문을 돌리기위해 1을 설정, 치즈의 존재유무를 확인한다.
 
-while setting:
+while setting: # 치즈가 있는동안
     S.append((0,0))
     setting = 0
     count_cheese = 0
     visit = [[1] * col for _ in range(row)] #방문 안한상태 '1'
-    count += 1
+    count += 1	# while문 한바퀴 돌때마다 +1
     visit[0][0] = 0  
-    while S:
+    while S:	# DFS
         x,y = S.pop() 
-        for i in range(4):
+        for i in range(4): # 사방탐색
             X = x+dr[i]
             Y = y+dc[i]
             if 0<= X < row and 0<= Y < col and cheese_pan[X][Y]==1 and visit[X][Y]:
-                cheese_pan[X][Y] = 0
-                visit[X][Y] = 0
-                count_cheese += 1
+                cheese_pan[X][Y] = 0 #치즈를 만나면 0으로 만들고
+                visit[X][Y] = 0		#방문 처리를 한다.
+                count_cheese += 1	#치즈를 찾으면 치즈개수를 누적시킨다.
             elif 0<= X < row and 0<= Y < col and cheese_pan[X][Y]==0 and visit[X][Y]:
-                visit[X][Y] = 0 # 방문했음
-                S.append((X,Y))
-    for r in cheese_pan:
+                visit[X][Y] = 0	#치즈가 아니면 방문처리를 하고
+                S.append((X,Y))	#스택에넣어서 계속 탐색할수있도록 한다.
+    for r in cheese_pan:	#치즈가 남아있는지 확인
         if 1 in r:
-            setting = 1
+            setting = 1	#있으면 while문을 계속 돌린다.
 print(count)
 print(count_cheese)
 ```
@@ -129,4 +129,53 @@ print(count_cheese)
 
 ### 느낀점
 
-- 
+- 보통 미로를 빠져나오기위해 BFS 를 썻다면 이경우 반대의 시점으로 생각해야했다.
+
+- 처음에 bfs로 접근해서, 0일때 사방탐색하면되지 않을까 생각했는데 빈공간에 있는경우 녹지 않기 때문에 좀 생각을 했다.
+
+- 사방탐색에서  리팩토링이 필요하다.
+
+  
+
+  ```python
+  if 0<= X < row and 0<= Y < col and cheese_pan[X][Y]==1 and visit[X][Y]:
+      cheese_pan[X][Y] = 0 #치즈를 만나면 0으로 만들고
+      visit[X][Y] = 0		#방문 처리를 한다.
+      count_cheese += 1	#치즈를 찾으면 치즈개수를 누적시킨다.
+  elif 0<= X < row and 0<= Y < col and cheese_pan[X][Y]==0 and visit[X][Y]:
+      visit[X][Y] = 0	#치즈가 아니면 방문처리를 하고
+      S.append((X,Y))	#스택에넣어서 계속 탐색할수있도록 한다.
+  ```
+
+  - 같은 조건이 여러개인것이 보이므로 간략화 시켜야한다.
+
+  
+
+- 마지막에 치즈가 남아있는지 확인하기위해 리스트를 한바퀴돌게 되는데.
+
+  
+
+  ```python
+  for r in cheese_pan:#치즈가 남아있는지 확인
+  	if 1 in r:
+  		setting = 1	#있으면 while문을 계속 돌린다.
+  ```
+
+  
+
+  풀 당시에도 비효율적이라고 생각했고 해결법으로 빈리스트를 만들어서 치즈 개수를 append 하면 간단히 해결될 문제였다.
+
+  
+
+  ```python
+  cheese_count_li =[2,3,4,5,6,3,0] #치즈개수를 넣다보면 마지막에 0으로 바뀔것이다.
+  if cheese_count_li[-1] == 0: #치즈가 남아있는지 확인
+  	if 1 in r:
+  		setting = 1	#있으면 while문을 계속 돌린다.
+  ```
+
+  
+
+  이런식이면 더효율적일 것이다.
+
+- DFS, BFS 문제는 익숙해진듯하다 하지만 아직 순열은 익숙치못하다 ㅠㅠ
